# swagger/v1/swagger.yaml
@@ -4,6 +4,112 @@ info:
   title: Aljam3 API
   version: v1
 paths:
+  "/api/v1/authors":
+    get:
+      summary: List authors
+      tags:
+      - Authors
+      parameters:
+      - name: q
+        in: query
+        required: false
+        description: Search query
+        schema:
+          type: string
+      - name: limit
+        in: query
+        required: false
+        description: Limit the number of authors to return
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 1000
+      - name: page
+        in: query
+        required: false
+        description: Page number to be returned
+        schema:
+          type: integer
+          default: 1
+          minimum: 1
+      responses:
+        '200':
+          description: authors found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  pagination:
+                    "$ref": "#/components/schemas/pagination"
+                  authors:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/author"
+                required:
+                - pagination
+                - authors
+  "/api/v1/authors/{id}":
+    get:
+      summary: Get an author
+      tags:
+      - Authors
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: Author ID
+        schema:
+          type: integer
+      - name: q
+        in: query
+        required: false
+        description: Search query
+        schema:
+          type: string
+      - name: limit
+        in: query
+        required: false
+        description: Limit the number of author's books to return
+        schema:
+          type: integer
+          default: 20
+          minimum: 1
+          maximum: 1000
+      - name: page
+        in: query
+        required: false
+        description: Page number to be returned
+        schema:
+          type: integer
+          default: 1
+          minimum: 1
+      responses:
+        '200':
+          description: author found
+          content:
+            application/json:
+              schema:
+                allOf:
+                - "$ref": "#/components/schemas/author"
+                - type: object
+                  properties:
+                    pagination:
+                      "$ref": "#/components/schemas/pagination"
+                    books:
+                      type: array
+                      items:
+                        "$ref": "#/components/schemas/book"
+                  required:
+                  - pagination
+                  - books
+        '404':
+          description: author not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
   "/api/v1/books":
     get:
       summary: List books
@@ -61,7 +167,7 @@ paths:
         required: true
         description: Book ID
         schema:
-          type: string
+          type: integer
       responses:
         '200':
           description: book found
@@ -69,6 +175,12 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/book"
+        '404':
+          description: book not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
 servers:
 - url: http://localhost:3000
 - url: https://aljam3.com
@@ -131,22 +243,20 @@ components:
         title:
           type: string
           description: Book title
+        pages_count:
+          type: integer
+          description: Number of pages
+        files_count:
+          type: integer
+          description: Number of files, -1 if not available
+        views_count:
+          type: integer
+          description: Number of views
+        volumes:
+          type: integer
+          description: Number of volumes
         author:
-          type: object
-          properties:
-            id:
-              type: integer
-              description: Author ID
-            name:
-              type: string
-              description: Author name
-            link:
-              type: string
-              description: API link to the author
-          required:
-          - id
-          - name
-          - link
+          "$ref": "#/components/schemas/author"
         category:
           type: object
           properties:
@@ -175,18 +285,6 @@ components:
           required:
           - id
           - name
-        pages_count:
-          type: integer
-          description: Number of pages
-        files_count:
-          type: integer
-          description: Number of files, -1 if not available
-        views_count:
-          type: integer
-          description: Number of views
-        volumes:
-          type: integer
-          description: Number of volumes
         link:
           type: string
           description: API link to the book
@@ -201,3 +299,31 @@ components:
       - views_count
       - volumes
       - link
+    author:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Author ID
+        name:
+          type: string
+          description: Author name
+        books_count:
+          type: integer
+          description: Number of books
+        link:
+          type: string
+          description: API link to the author
+      required:
+      - id
+      - name
+      - books_count
+      - link
+    not_found:
+      type: object
+      properties:
+        error:
+          type: string
+          description: Error message
+      required:
+      - error
